// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded blob 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "commitment001",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash001.txt",
              },
              {
                "blobStorage": "swarm",
                "dataReference": "bzz://some-hash-for-blobHash001",
              },
            ],
            "index": 0,
            "proof": "proof001",
            "size": 1000,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 0,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 1,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 2,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "2883584",
        "blobGasMaxFee": "13107200",
        "blobGasUsed": "131072",
        "blobs": [
          {
            "commitment": "commitment001",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash001.txt",
              },
              {
                "blobStorage": "swarm",
                "dataReference": "bzz://some-hash-for-blobHash001",
              },
            ],
            "index": 0,
            "proof": "proof001",
            "size": 1000,
            "versionedHash": "blobHash001",
          },
        ],
        "from": "address2",
        "hash": "txHash016",
        "maxFeePerBlobGas": "100",
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "8650752",
        "blobGasMaxFee": "39321600",
        "blobGasUsed": "393216",
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 0,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 1,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "blobStorage": "google",
                "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "blobStorage": "postgres",
                "dataReference": "blobHash004",
              },
            ],
            "index": 2,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "from": "address5",
        "hash": "txHash015",
        "maxFeePerBlobGas": "100",
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded transaction 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "2883584",
        "blobGasMaxFee": "13107200",
        "blobGasUsed": "131072",
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "from": "address2",
        "hash": "txHash016",
        "maxFeePerBlobGas": "100",
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "8650752",
        "blobGasMaxFee": "39321600",
        "blobGasUsed": "393216",
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "from": "address5",
        "hash": "txHash015",
        "maxFeePerBlobGas": "100",
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the latest results when no sort was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the oldest results when ascending order is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
          {
            "index": 3,
            "versionedHash": "blobHash004",
          },
          {
            "index": 4,
            "versionedHash": "blobHash005",
          },
          {
            "index": 5,
            "versionedHash": "blobHash006",
          },
        ],
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash001",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the block range specified  1`] = `
[
  {
    "blobAsCalldataGasUsed": "250000",
    "blobGasPrice": "20",
    "blobGasUsed": "5000000",
    "excessBlobGas": "10000",
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": "2023-08-28T10:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash001",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash012",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash013",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the date range specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash001",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the receiver address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the rollup specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "250000",
    "blobGasPrice": "20",
    "blobGasUsed": "5000000",
    "excessBlobGas": "10000",
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": "2023-08-28T10:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash001",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash012",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
          {
            "index": 3,
            "versionedHash": "blobHash004",
          },
          {
            "index": 4,
            "versionedHash": "blobHash005",
          },
          {
            "index": 5,
            "versionedHash": "blobHash006",
          },
        ],
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender and receiver addresses specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
          {
            "index": 3,
            "versionedHash": "blobHash004",
          },
          {
            "index": 4,
            "versionedHash": "blobHash005",
          },
          {
            "index": 5,
            "versionedHash": "blobHash006",
          },
        ],
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the block specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the date specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the slot specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the block specificed 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the date specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the slot specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash004",
          },
          {
            "index": 1,
            "versionedHash": "blobHash004",
          },
          {
            "index": 2,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash002",
          },
          {
            "index": 1,
            "versionedHash": "blobHash002",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "index": 0,
            "versionedHash": "blobHash001",
          },
          {
            "index": 1,
            "versionedHash": "blobHash001",
          },
          {
            "index": 2,
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getByBlockId > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "index": 0,
          "versionedHash": "blobHash001",
        },
        {
          "index": 1,
          "versionedHash": "blobHash002",
        },
        {
          "index": 2,
          "versionedHash": "blobHash003",
        },
        {
          "index": 3,
          "versionedHash": "blobHash004",
        },
        {
          "index": 4,
          "versionedHash": "blobHash005",
        },
        {
          "index": 5,
          "versionedHash": "blobHash006",
        },
      ],
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a block by hash 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "2500000",
  "excessBlobGas": "55000",
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": "2023-08-31T15:50:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "index": 0,
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
      "rollup": "optimism",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a reorged block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "2500000",
  "excessBlobGas": "55000",
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": "2023-08-31T15:50:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "index": 0,
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
      "rollup": "optimism",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get the canonical block when providing a block number matching a reorged block 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash008",
  "number": 1008,
  "slot": 108,
  "timestamp": "2023-08-31T16:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "index": 0,
          "versionedHash": "blobHash001",
        },
      ],
      "hash": "txHash016",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded blob 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "commitment001",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash001.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash001",
            },
          ],
          "index": 0,
          "proof": "proof001",
          "size": 1000,
          "versionedHash": "blobHash001",
        },
        {
          "commitment": "commitment002",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash002.txt",
            },
          ],
          "index": 1,
          "proof": "proof002",
          "size": 1100,
          "versionedHash": "blobHash002",
        },
        {
          "commitment": "commitment003",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash003.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash003",
            },
          ],
          "index": 2,
          "proof": "proof003",
          "size": 1200,
          "versionedHash": "blobHash003",
        },
        {
          "commitment": "commitment004",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
            },
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash004",
            },
          ],
          "index": 3,
          "proof": "proof004",
          "size": 1300,
          "versionedHash": "blobHash004",
        },
        {
          "commitment": "commitment005",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash005",
            },
          ],
          "index": 4,
          "proof": "proof005",
          "size": 1400,
          "versionedHash": "blobHash005",
        },
        {
          "commitment": "commitment006",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash006",
            },
          ],
          "index": 5,
          "proof": "proof006",
          "size": 1500,
          "versionedHash": "blobHash006",
        },
      ],
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded blob data 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "commitment001",
          "data": "0x0e2e5a3a2011ad49f5055eb3227d66d5",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash001.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash001",
            },
          ],
          "index": 0,
          "proof": "proof001",
          "size": 1000,
          "versionedHash": "blobHash001",
        },
        {
          "commitment": "commitment002",
          "data": "0x1ad6f58b3af99d6f7f70adcee71a1813",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash002.txt",
            },
          ],
          "index": 1,
          "proof": "proof002",
          "size": 1100,
          "versionedHash": "blobHash002",
        },
        {
          "commitment": "commitment003",
          "data": "0x2142337a5355685b119880ba35efdd6b",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash003.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash003",
            },
          ],
          "index": 2,
          "proof": "proof003",
          "size": 1200,
          "versionedHash": "blobHash003",
        },
        {
          "commitment": "commitment004",
          "data": "0x4fe40fc67f9c3a3ffa2be77d10fe7818",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
            },
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash004",
            },
          ],
          "index": 3,
          "proof": "proof004",
          "size": 1300,
          "versionedHash": "blobHash004",
        },
        {
          "commitment": "commitment005",
          "data": "0x227c67ad87439bf6aa2c94a56a0f099a",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash005",
            },
          ],
          "index": 4,
          "proof": "proof005",
          "size": 1400,
          "versionedHash": "blobHash005",
        },
        {
          "commitment": "commitment006",
          "data": "0x39b710067e86cf6455c65306bae869dd",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash006",
            },
          ],
          "index": 5,
          "proof": "proof006",
          "size": 1500,
          "versionedHash": "blobHash006",
        },
      ],
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "17301504",
      "blobGasMaxFee": "78643200",
      "blobGasUsed": "786432",
      "blobs": [
        {
          "commitment": "commitment001",
          "data": "0x0e2e5a3a2011ad49f5055eb3227d66d5",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash001.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash001",
            },
          ],
          "index": 0,
          "proof": "proof001",
          "size": 1000,
          "versionedHash": "blobHash001",
        },
        {
          "commitment": "commitment002",
          "data": "0x1ad6f58b3af99d6f7f70adcee71a1813",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash002.txt",
            },
          ],
          "index": 1,
          "proof": "proof002",
          "size": 1100,
          "versionedHash": "blobHash002",
        },
        {
          "commitment": "commitment003",
          "data": "0x2142337a5355685b119880ba35efdd6b",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash003.txt",
            },
            {
              "blobStorage": "swarm",
              "dataReference": "bzz://some-hash-for-blobHash003",
            },
          ],
          "index": 2,
          "proof": "proof003",
          "size": 1200,
          "versionedHash": "blobHash003",
        },
        {
          "commitment": "commitment004",
          "data": "0x4fe40fc67f9c3a3ffa2be77d10fe7818",
          "dataStorageReferences": [
            {
              "blobStorage": "google",
              "dataReference": "70118930558/ob/Ha/sh/obHash004.txt",
            },
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash004",
            },
          ],
          "index": 3,
          "proof": "proof004",
          "size": 1300,
          "versionedHash": "blobHash004",
        },
        {
          "commitment": "commitment005",
          "data": "0x227c67ad87439bf6aa2c94a56a0f099a",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash005",
            },
          ],
          "index": 4,
          "proof": "proof005",
          "size": 1400,
          "versionedHash": "blobHash005",
        },
        {
          "commitment": "commitment006",
          "data": "0x39b710067e86cf6455c65306bae869dd",
          "dataStorageReferences": [
            {
              "blobStorage": "postgres",
              "dataReference": "blobHash006",
            },
          ],
          "index": 5,
          "proof": "proof006",
          "size": 1500,
          "versionedHash": "blobHash006",
        },
      ],
      "from": "address1",
      "hash": "txHash004",
      "maxFeePerBlobGas": "100",
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded transaction 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "17301504",
      "blobGasMaxFee": "78643200",
      "blobGasUsed": "786432",
      "blobs": [
        {
          "index": 0,
          "versionedHash": "blobHash001",
        },
        {
          "index": 1,
          "versionedHash": "blobHash002",
        },
        {
          "index": 2,
          "versionedHash": "blobHash003",
        },
        {
          "index": 3,
          "versionedHash": "blobHash004",
        },
        {
          "index": 4,
          "versionedHash": "blobHash005",
        },
        {
          "index": 5,
          "versionedHash": "blobHash006",
        },
      ],
      "from": "address1",
      "hash": "txHash004",
      "maxFeePerBlobGas": "100",
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;
